--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "american-british-english-translator",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "Quality Assurance 5: American / British English Translator",
+  "author": "Austin Weeks",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon --watch server.js",
     "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
