--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Austin Weeks",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --watch server.js",
+    "start": "node --watch server.js",
     "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
@@ -19,8 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.4.0",
-    "mocha": "^8.1.3",
-    "nodemon": "^2.0.4"
+    "mocha": "^10.5.2"
   },
   "license": "MIT"
 }
